--- a/mod02-01/index.html
+++ b/mod02-01/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0"> <!-- it tells the browser that this is mobile friendly -->
-	<meta name="X-UA-Compatible" content="IE=Edge"> <!-- compatibility to old version of internet exporer -->
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge"> <!-- compatibility to old version of internet exporer -->
 
 	<title>My Second Website - This is the best website ever</title>
 
