CSS Activity 1 Box Model

--- a/mod02-06/index.html
+++ b/mod02-06/index.html
@@ -22,7 +22,7 @@
 
 				<div style="height: 1px"></div>
 
-				<p>Block element define the flow of the HTML document, while inline elements do not.</p>
+				<p>Block element define the flow of the HTML document, while <span>inline elements</span> do not.</p>
 	
 			</div>
 
