--- a/mod02-11/index.html
+++ b/mod02-11/index.html
@@ -7,31 +7,31 @@
 </head>
 <body>
 
-
+<div class="wrapper">
 
 <div class="black-container-1">
 
-	<div class="grey-boxes"></div>
-	<div class="grey-boxes"></div>
-	<div class="grey-boxes"></div>
-	<div class="grey-boxes"></div>
-	<div class="grey-boxes"></div>
-	<div class="grey-boxes"></div>
-	<div class="grey-boxes"></div>
-	<div class="grey-boxes"></div>	
+	<div class="grey-boxes"><img src="https://lorempixel.com/300/300/"></img></div>
+	<div class="grey-boxes"><img src="https://lorempixel.com/300/300/"></img></div>
+	<div class="grey-boxes"><img src="https://lorempixel.com/300/300/"></img></div>
+	<div class="grey-boxes"><img src="https://lorempixel.com/300/300/"></img></div>
+	<div class="grey-boxes"><img src="https://lorempixel.com/300/300/"></img></div>
+	<div class="grey-boxes"><img src="https://lorempixel.com/300/300/"></img></div>
+	<div class="grey-boxes"><img src="https://lorempixel.com/300/300/"></img></div>
+	<div class="grey-boxes"><img src="https://lorempixel.com/300/300/"></img></div>	
 
 </div>
 
 <div class="black-container-2">
 
-	<div class="white-border-container"><div class="greybox2"></div><p>caption 1</p></div>
-	<div class="white-border-container"><div class="greybox2"></div><p>caption 2</p></div>
-	<div class="white-border-container"><div class="greybox2"></div><p>caption 3</p></div>
-	<div class="white-border-container"><div class="greybox2"></div><p>caption 4</p></div>
-	<div class="white-border-container"><div class="greybox2"></div><p>caption 5</p></div>
-	<div class="white-border-container"><div class="greybox2"></div><p>caption 6</p></div>
-	<div class="white-border-container"><div class="greybox2"></div><p>caption 7</p></div>
-	<div class="white-border-container"><div class="greybox2"></div><p>caption 8</p></div>	
+	<div class="white-border-container"><div class="greybox2"><img src="https://lorempixel.com/300/300/"></img></div><p class="caption2">caption 1</p></div>
+	<div class="white-border-container"><div class="greybox2"><img src="https://lorempixel.com/300/300/"></img></div><p class="caption2">caption 2</p></div>
+	<div class="white-border-container"><div class="greybox2"><img src="https://lorempixel.com/300/300/"></img></div><p class="caption2">caption 3</p></div>
+	<div class="white-border-container"><div class="greybox2"><img src="https://lorempixel.com/300/300/"></img></div><p class="caption2">caption 4</p></div>
+	<div class="white-border-container"><div class="greybox2"><img src="https://lorempixel.com/300/300/"></img></div><p class="caption2">caption 5</p></div>
+	<div class="white-border-container"><div class="greybox2"><img src="https://lorempixel.com/300/300/"></img></div><p class="caption2">caption 6</p></div>
+	<div class="white-border-container"><div class="greybox2"><img src="https://lorempixel.com/300/300/"></img></div><p class="caption2">caption 7</p></div>
+	<div class="white-border-container"><div class="greybox2"><img src="https://lorempixel.com/300/300/"></img></div><p class="caption2">caption 8</p></div>	
 
 </div>
 
@@ -39,7 +39,7 @@
 
 	<h2>Basic Principles and Manifestations of Disease</h2>
 
-	<div class="greybox3"></div>
+	<div class="greybox3"><img src="https://lorempixel.com/300/300/"></img></div>
 
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -57,36 +57,230 @@
 
 </div>
 
-<div class="blackcontainer4">
 
-	<h2>Harrison's Internal Medicine</h2>
+<section class="section4">
 
-	<div class="greybox4"></div>
+	<div class="blackcontainer4">
 
-	<div class="textcontainer4">
+		<h2>Harrison's Internal Medicine</h2>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div class="greybox4"><img src="https://lorempixel.com/300/300/"></img></div>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div class="textcontainer4">
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+		</div>
+	</div>
+
+</section>
+
+<section class="section5">
+	
+	<div class="blackcontainer5">
+		
+			<div class="greybox5"><img src="https://lorempixel.com/300/300/"></img></div>
+			<textarea class="textarea5">Add a comment</textarea>
+
+			<form class="buttons5">
+				<input type="submit" name="Cancel" value="Cancel">
+				<input type="submit" name="Add" value="Add">
+			</form>
 
 	</div>
+
+</section><!-- section 5 -->
+
+
+<section class="section6">
+	
+	<div class="blackcontainer6">
+		
+		<div class="greybox6"></div>
+		<div class="content6">
+			<p>Juan dela Cruz</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat.</p>
+
+			<div class="linkcontainer">
+
+			<a href="#"><p class="link">Like</p></a>
+			<a href="#"><p class="link">Reply</p></a>
+
+				</div>
+
+				<div class="greybox6"></div>
+				<div class="content6">
+				<p>Juan dela Cruz</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<div class="linkcontainer">
+
+				<p class="link">Like</p>
+				<p class="link">Reply</p>
+
+				</div>
+
+				</div>
+
+				<div class="greybox6"></div>
+				<div class="content6">
+				<p>Juan dela Cruz</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<div class="linkcontainer">
+
+				<p class="link">Like</p>
+				<p class="link">Reply</p>
+
+				</div>
+
+				</div>
+
+	</div><!-- backcontainer6 -->
+
+
+</section><!-- section6 -->
+
+
+<section class="section7">
+	
+	<div class="blackcontainer7">
+		<div class="greybox7"></div>
+		<div class="content7">
+			<h3>DIY Inexpensive Gifts for Valentines</h3>
+			<p>Astor000</p>
+			<p>3,600,531 views</p>
+
+		</div>
+		
+	</div><!-- blackcontainer7 -->
+
+</section><!-- section 7 -->
+
+
+
+<section class="section8">
+	
+	<div class="blackcontainer8">
+
+		<div class="content8">
+			<h3>51 Smart Ideas for Small Apartment</h3>
+			<p>Lee Heather</p>
+			<p>3,600 views</p>
+
+		</div>
+
+		<div class="greybox8"></div>
+		
+		
+	</div><!-- blackcontainer8 -->
+
+</section><!-- section 8 -->
+
+
+<section class="section9">
+
+	<div class="blackcontainer9">
+	
+	<div class="content9">
+		<h2>Apple iPhone</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.</p>
+		<input type="submit" name="readmore" value="Read more">
+	</div>
+
+	<div class="boxcontainer">
+		
+		<div class="greybox9"></div>
+		<div class="greybox9"></div>
+		<div class="greybox9"></div>
+		<div class="greybox9"></div>
+		<div class="greybox9"></div>
+		<div class="greybox9"></div>
+
+	</div>
+
+	</div>
+
+</section><!-- section 9 -->
+
+
+<div class="black-container-10">
+
+	<div class="boxcontainer10">
+
+	<div class="white-border-container-10"><p class="caption2">caption 1</p><div class="greybox10"></div></div>
+	<div class="white-border-container-10"><p class="caption2">caption 2</p><div class="greybox10"></div></div>
+	<div class="white-border-container-10"><p class="caption2">caption 3</p><div class="greybox10"></div></div>
+	<div class="white-border-container-10"><p class="caption2">caption 4</p><div class="greybox10"></div></div>
+	<div class="white-border-container-10"><p class="caption2">caption 5</p><div class="greybox10"></div></div>
+	<div class="white-border-container-10"><p class="caption2">caption 6</p><div class="greybox10"></div></div>
+	<div class="white-border-container-10"><p class="caption2">caption 7</p><div class="greybox10"></div></div>
+	<div class="white-border-container-10"><p class="caption2">caption 8</p><div class="greybox10"></div></div>	
+
+	</div><!-- boxcontainer10 -->
+
+	<div class="content10">
+		<div class="largegreybox"></div>
+		<nav class="link10">
+			<a href="#"><p class="link10">menu</p></a>
+			<a href="#"><p class="link10">menu</p></a>
+			<a href="#"><p class="link10">menu</p></a>
+			<a href="#"><p class="link10">menu</p></a>
+		</nav>
+
+		<div class="content2">
+
+		<div class="beautifulbox"></div>
+
+		<h2>Beautiful Baguio</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+		</div>
+
+	</div>
+
+
 </div>
 
 
-
-
-
-
+</div> <!-- wrapper -->
 
 
 </body>
