--- a/csp1/index.html
+++ b/csp1/index.html
@@ -8,114 +8,165 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
-<!-- carousel -->
-	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-	  <!-- Indicators -->
-	  <ol class="carousel-indicators">
-	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-	  </ol>
+<!-- navigation -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Base Builds</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Location</a></li>
+    </ul>
+  </div>
+</nav>
+<!-- navigation -->
 
-	  <!-- Wrapper for slides -->
-	  <div class="carousel-inner" role="listbox">
-	    <div class="item active">
-	      <img src="https://scontent.fmnl4-3.fna.fbcdn.net/v/t1.0-9/24174655_1572391556174228_3206950032711634148_n.jpg?oh=c25cce4e3325f0927d9b8b37b9bea6ad&oe=5ACA8DB8" alt="...">
-	      <div class="carousel-caption">
-	        ...
-	      </div>
-	    </div>
-	    <div class="item">
-	      <img src="https://scontent.fmnl4-3.fna.fbcdn.net/v/t1.0-9/23915878_1572391552840895_5408997050199855565_n.jpg?oh=10f97788e190b0e6b6dfd295415bb83e&oe=5A88F901" alt="...">
-	      <div class="carousel-caption">
-	        ...
-	      </div>
-	    </div>
-	    ...
-	  </div>
-
-	  <!-- Controls -->
-	  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-	  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-	    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
-	</div>
-<!-- carousel -->
+<!-- jumbotron -->
+<div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua.</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
 
 <div class="container">
+<!-- jumbotron -->
 
+	<!-- about -->
+	<div class="row about">
 
-<!-- purpose -->
+	  <div class="col-md-4 about-box">
 
-	<div class="row">
-	  <div class="col-md-4">
-	  	<div class="social-impact">
-	  	<span class="glyphicon glyphicon-grain" aria-hidden="true"></span>
-	  	<h2>Grow</h2>
-	  	<p>farmers employed</p>
-	 	</div>
+		  	<span class="glyphicon glyphicon-grain" aria-hidden="true"></span>
+		  	<h2>Grow</h2>
+		  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		  	tempor incididunt ut labore et dolore magna aliqua.</p>
+	 
 	  </div>
 	  
 
-	  <div class="col-md-4">
-	  	<div class="social-impact">
-	  	<h2>Build</h2>
-	  	<p>houses built</p>
-	  	</div>
+	  <div class="col-md-4 about-box">
+	  
+		  	<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+		  	<h2>Build</h2>
+		  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		  	tempor incididunt ut labore et dolore magna aliqua.</p>
+	 
 	  </div>
 
-	  <div class="col-md-4">
-	  	<div class="social-impact">
-	  	<h2>Transform</h2>
-	  	<p>individuals sheltered</p>
-	  	</div>
+	  <div class="col-md-4 about-box">
+
+		  	<span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+		  	<h2>Transform</h2>
+		  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		  	tempor incididunt ut labore et dolore magna aliqua.</p>
+
 	  </div>
+
+	</div><!-- about -->
+
+
+
+
+
+	<!-- testinomials -->
+
+	<div class="row testimonials">
+
+	  <div class="col-md-2 testi-profile">
+	  	<img src="img/profile-1.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
+	  </div>
+
+	  <div class="col-md-4 testi-caption"><blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	  consequat.</blockquote></div>
+
+	  <div class="col-md-2 testi-profile">
+	  	<img src="img/profile-1.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
+	  </div>
+
+	  <div class="col-md-4 testi-caption"><blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	  consequat.</blockquote></div>
+
 	</div>
 
+	<div class="row testimonials">
 
+	  <div class="col-md-2 testi-profile">
+	  	<img src="img/profile-1.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
+	  </div>
 
+	  <div class="col-md-4 testi-caption"><blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	  consequat.</blockquote></div>
 
-<!-- purpose -->
+	  <div class="col-md-2 testi-profile">
+	  	<img src="img/profile-1.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
+	  </div>
 
+	  <div class="col-md-4 testi-caption"><blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	  consequat.</blockquote></div>
 
+	</div>
 
+	
+	<!-- social impact -->
+	<div class="row social-impact">
 
-<!-- social impact -->
-	<div class="row">
-	  <div class="col-md-4">
-	  	<div class="social-impact">
-	  	<h2>50</h2>
-	  	<p>farmers employed</p>
-	 	</div>
+	  <div class="col-md-4 social-impact-box" id="social-impact-1">
+	   	
+	   	<div class="social-content">
+	   	<h2>50</h2>
+	  	<h4>farmers employed</h4>
+	  	</div>
 	  </div>
 	  
 
-	  <div class="col-md-4">
-	  	<div class="social-impact">
+	  <div class="col-md-4 social-impact-box" id="social-impact-2">
+	  	<div class="social-content">
 	  	<h2>400</h2>
-	  	<p>houses built</p>
+	  	<h4>houses built</h4>
 	  	</div>
 	  </div>
 
-	  <div class="col-md-4">
-	  	<div class="social-impact">
+	  <div class="col-md-4 social-impact-box" id="social-impact-3">
+	  	<div class="social-content">
 	  	<h2>2,400</h2>
-	  	<p>individuals sheltered</p>
+	  	<h4>individuals sheltered</h4>
 	  	</div>
 	  </div>
-	</div>
-<!-- social impact -->
 
+	</div><!-- social impact -->
 
+	<!-- footer -->
+	<div class="row footer">
 
+		  <div class="col-md-6 footer-box" id="footer-address">
+		   	<p>HILTI Training Center, UPRC III Bdlg, 2289, Chino Roces Ave, Makati, 1200 Metro Manila</p>
+		  </div>
+		  
 
+		  <div class="col-md-6 footerbox" id="footer-social-media">
+		  	<i class="fa fa-facebook fa-4x" aria-hidden="true"></i>
+		  	<i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
+
+		  </div>
+
+	</div><!-- footer -->
+	
 </div><!-- container -->
 
 </body>
