--- a/csp1/about.html
+++ b/csp1/about.html
@@ -31,9 +31,9 @@
 	 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="index.html">Home</a></li>
-		      <li><a href="about.html">About</a></li>
-		      <li><a href="#">Projects</a></li>
+		      <li><a href="index.html">Home</a></li>
+		      <li class="active"><a href="about.html">About</a></li>
+		      <li><a href="projects.html">Projects</a></li>
 		      <li><a href="contact.html">Contact Us</a></li>
 		    </ul>
 
@@ -45,11 +45,10 @@
 
 
 
-	<!-- banner -->
-	<div class="banner">
-	  <img src="img/banner.jpg">
-	</div><!-- banner -->
-
+<!-- banner -->
+<div class="banner_about">
+ 
+</div><!-- banner -->
 
 <div class="container">
 
