--- a/csp1/projects.html
+++ b/csp1/projects.html
@@ -33,8 +33,8 @@
 		    <ul class="nav navbar-nav">
 		      <li><a href="index.html">Home</a></li>
 		      <li><a href="about.html">About</a></li>
-		      <li><a href="projects.html">Projects</a></li>
-		      <li class="active"><a href="contact.html">Contact Us</a></li>
+		      <li class="active"><a href="projects.html">Projects</a></li>
+		      <li><a href="contact.html">Contact Us</a></li>
 		    </ul>
 
 	  </div>
@@ -46,20 +46,13 @@
 
 
 <!-- banner -->
-<div class="banner_contact">
+<div class="banner_projects">
  
 </div><!-- banner -->
 
 
-<div class="container">
 
 
-	<h3>HILTI Training Center</h3>
-	<h3>UPRC III Bdlg, 2289,</h3>
-	<h3>Chino Roces Ave, Makati 1232
-	<h3>Metro Manila, Philippines</h2>
-
-</div><!-- container -->
 	<!-- footer -->
 	<div class="row footer">
 
