javascript activity mod07-02

--- a/csp1/about.html
+++ b/csp1/about.html
@@ -44,41 +44,33 @@
 <!-- navigation -->
 
 
-
 <!-- banner -->
 <div class="banner_about">
  
 </div><!-- banner -->
 
-<div class="container">
+<div class="container content">
+	
+	<p>Headquartered in Singapore, we currently operate in the Philippines through our subsidiary BASE Bahay Inc. (BBI). Base was established in July 2014 as a triple bottom line  (TBL) enterprise creating value across the three pillars of sustainability – People, Planet and Profit. Base achieves this by using locally grown and renewable materials to develop housing envelops and designs suited to the needs of local communities and by doing so, creating equitable eco-systems along the value chain towards sustainable, inclusive business models – and hence create livelihood.</p>
 
+	<h2>How it started</h2>
 
-	<p class="first_paragraph">
-		Headquartered in Singapore, we currently operate in the Philippines through our subsidiary BASE Bahay Inc. (BBI). Base was established in July 2014 as a triple bottom line  (TBL) enterprise creating value across the three pillars of sustainability – People, Planet and Profit. Base achieves this by using locally grown and renewable materials to develop housing envelops and designs suited to the needs of local communities and by doing so, creating equitable eco-systems along the value chain towards sustainable, inclusive business models – and hence create livelihood.
-	</p>
+	<p>Unprecedented urbanization in Asia and the Pacific holds the promise of economic and social development to lift hundreds of millions of people out of poverty. However, current urban development patterns are both unsustainable and inequitable. Most visibly, a significant portion of the region’s urban population lives in inadequate, disaster-prone shelter, while the construction and utilization of conventional buildings in urban settings has an unfavorable environmental impact. To bring about transformational change, urban housing needs to become more inclusive, sustainable and scalable.</p>
 
+	<p>To tackle such a game changer, Hilti Foundation and UN ESCAP joined forces in 2012 to research and implement successful approaches for the introduction of affordable, eco-efficient and disaster-resilient building materials and housing concepts in urban contexts of Asia and the Pacific. Beyond providing environmental friendly and affordable housing to all income groups, especially the urban and peri-urban poor, the aim is to create sustainable livelihood opportunities for the poor, and to potentially introduce new income sources for organizations and individuals engaged in community-driven development.</p>
+		
+	<h3>January 2012 – September 2013: Product Development & Testing</h3>
 
-		<h2>How it started</h2>
-	<p>
-	Unprecedented urbanization in Asia and the Pacific holds the promise of economic and social development to lift hundreds of millions of people out of poverty. However, current urban development patterns are both unsustainable and inequitable. Most visibly, a significant portion of the region’s urban population lives in inadequate, disaster-prone shelter, while the construction and utilization of conventional buildings in urban settings has an unfavorable environmental impact. To bring about transformational change, urban housing needs to become more inclusive, sustainable and scalable.
+	<p>Assessment of the mechanical properties of round bamboo at material, system and building scale, as well as research, development and testing of different connections and construction systems. The necessary know-how was gathered to design houses to withstand the requirements of a challenging Philippine environment and to create permanent housing. Six demo houses were built in Albay, Bicol and Western Visayas to conduct real-life typhoon testing as well as test customer acceptance. Through the ability to customize structural designs according to the seismic and wind requirements of the National Structural Code of the Philippines, the legal approval by local authorities is enabled.</p>
+		
+	<h3>October 2012 - September 2013: Market Research & Business Plan Development</h3>
 
-	To tackle such a game changer, Hilti Foundation and UN ESCAP joined forces in 2012 to research and implement successful approaches for the introduction of affordable, eco-efficient and disaster-resilient building materials and housing concepts in urban contexts of Asia and the Pacific. Beyond providing environmental friendly and affordable housing to all income groups, especially the urban and peri-urban poor, the aim is to create sustainable livelihood opportunities for the poor, and to potentially introduce new income sources for organizations and individuals engaged in community-driven development.
-	</p>
-
-
-		<h3>January 2012 – September 2013: Product Development and Testing</h3>
-	<p>
-	Assessment of the mechanical properties of round bamboo at material, system and building scale, as well as research, development and testing of different connections and construction systems. The necessary know-how was gathered to design houses to withstand the requirements of a challenging Philippine environment and to create permanent housing. Six demo houses were built in Albay, Bicol and Western Visayas to conduct real-life typhoon testing as well as test customer acceptance. Through the ability to customize structural designs according to the seismic and wind requirements of the National Structural Code of the Philippines, the legal approval by local authorities is enabled.
-	</p>
-
-	<h3>October 2012 - September 2013: Market Research and Business Plan Development</h3>
-	<p>
-	Studies on business models, technical aspects and policy issues were conducted in line with product development and testing. Looking from a macro perspective of the Philippines as a nation to specific localities and the applicability of certain concepts and products, the goal is to establish a renewable building materials industry with the creation of social enterprises and livelihood opportunities along the value chain of a community.</p>
+	<p>Studies on business models, technical aspects and policy issues were conducted in line with product development and testing. Looking from a macro perspective of the Philippines as a nation to specific localities and the applicability of certain concepts and products, the goal is to establish a renewable building materials industry with the creation of social enterprises and livelihood opportunities along the value chain of a community.</p>
 
 	<h3>October 2013 ff : Start-up of the Social Enterprise BASE</h3>
-	<p>
-	After valuable information gained during the product development and market research phase, Hilti Foundation decided to incubate the first social enterprise to bring this promising business case from concept to realization with the Philippines being its first entry point.</p>
-	
+
+	<p>After valuable information gained during the product development and market research phase, Hilti Foundation decided to incubate the first social enterprise to bring this promising business case from concept to realization with the Philippines being its first entry point.</p>
+
 </div><!-- container -->
 
 	<!-- footer -->
