--- a/csp1/contact.html
+++ b/csp1/contact.html
@@ -53,9 +53,8 @@
 
 <div class="container">
 
-<!-- form -->
-<div class="container">
-    <div class="row">
+
+<div class="row">
         <div class="col-md-8">
             <div class="well well-sm">
                 <form>
@@ -106,23 +105,14 @@
             <legend><span class="glyphicon glyphicon-globe"></span> Our office</legend>
             <address>
                 <strong>Base Bahay Foundation, Inc.</strong><br>
-                HILTI Training Center, <br>
-                UPRC III Bdlg, 2289, Chino Roces Ave, Makati<br>
-                1200 Metro Manila, Philippines <br>
-                <abbr title="Phone">
-            </address>
-            <address>
-                <strong>Full Name</strong><br>
-                <a href="mailto:#">first.last@example.com</a>
-            </address>
+                HILTI Training Center <br>
+                UPRC III Bdlg, 2289 <br>
+                Chino Roces Ave, Makati 1200 <br>
+                Metro Manila<br>
+
             </form>
         </div>
     </div>
-</div>
-
-<!-- form -->
-
-
 
 </div><!-- container -->
 	<!-- footer -->
