--- a/csp1/index.html
+++ b/csp1/index.html
@@ -43,6 +43,7 @@
 </nav>
 <!-- navigation -->
 
+
 <!-- carousel -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -77,9 +78,10 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-</div> <!-- carousel -->
+<!-- carousel -->
 
 <div class="container">
+
 
 	<!-- about -->
 	<div class="row about">
@@ -92,6 +94,7 @@
 	 
 	  </div>
 	  
+
 	  <div class="col-md-4 about-box">
 	  
 		  	<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
@@ -110,49 +113,44 @@
 
 	</div><!-- about -->
 
+
+
+
+
 	<!-- testinomials -->
 
 	<div class="row testimonials">
 
 	  <div class="col-md-2 testi-profile">
-	  	<img src="img/profile-1.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
+	  	<img src="img/matulac.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
 	  </div>
 
-	  <div class="col-md-4 testi-caption"><blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  consequat.</blockquote></div>
+	  <div class="col-md-4 testi-caption"><blockquote> “We used to plant and harvest only vegetables and rice. But in between planting and harvesting, we do not earn. Because of BASE, we now earn the whole year harvesting bamboo. Now, my family can eat 3 meals a day and we can send our youngest child to school” </blockquote><p>-PATRICIO MATULAC, MURCIA FARMER</p></div>
 
 	  <div class="col-md-2 testi-profile">
-	  	<img src="img/profile-borja.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
+	  	<img src="img/rampah.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
 	  </div>
 
-	  <div class="col-md-4 testi-caption"><blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  consequat.</blockquote></div>
+	  <div class="col-md-4 testi-caption"><blockquote>“We lost our previous house to a very strong typhoon.  In this house, we feel SAFE. Now, We don’t have to think of the expenses for the rent and so it’s easier to send our children to school. The school is near the community and even the jobs are accessible”</blockquote><p>Raffy Rampah, Beneficiary – Bagong Silangan</p></div>
 
 	</div>
 
 	<div class="row testimonials">
 
 	  <div class="col-md-2 testi-profile">
+	  	<img src="img/magalona.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
+	  </div>
+
+	  <div class="col-md-4 testi-caption"><blockquote>Not only are we giving a bright future to a community of 50 families with the beautiful homes but even more, we are learning how bamboo, that is abundant in our province, can be a sustainable alternative to helping the homeless build strong and lasting homes.</blockquote> <p>Roberto Magalona, Gawad Kalinga Bacolod</p></div>
+
+	  <div class="col-md-2 testi-profile">
 	  	<img src="img/profile-oquinena.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
 	  </div>
 
-	  <div class="col-md-4 testi-caption"><blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  consequat.</blockquote></div>
+	  <div class="col-md-4 testi-caption"><blockquote>“I am very excited about this project and I feel that this is a promising design with so many possibilities.  I am very pleased to hear about the importance you give to researching the best sustainable materials to use for the poor.  I feel our Visions are aligned.  We too, continue to look for ways to be able to help them better.”</blockquote><p>Luis Oquineña, Gawad Kalinga Executive Director</p>
 
-	  <div class="col-md-2 testi-profile">
-	  	<img src="img/profile-pascual.jpg" class="img-circle" alt="Cinque Terre" width="125" height="125">
-	  </div>
 
-	  <div class="col-md-4 testi-caption"><blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  consequat.</blockquote></div>
+</div>
 
 	</div>
 
