--- a/csp1/projects.html
+++ b/csp1/projects.html
@@ -43,31 +43,41 @@
 </nav>
 <!-- navigation -->
 
-
-
 <!-- banner -->
 <div class="banner_projects">
  
 </div><!-- banner -->
 
 
+<div class="container">
+	
+	<div class="row project-wrapper">
+	  <div class="col-md-4 project-box"><a href=""><img class="project-img" src="img/tacloban.jpg"><h2>Tacloban</h2></div>
+	  <div class="col-md-4 project-box"><a href=""><img class="project-img" src="img/bsilangan.jpg"><h2>Quezon City</h2></div>
+	  <div class="col-md-4 project-box"><a href=""><img class="project-img" src="img/bacolod.jpg"><h2>Bacolod</h2></div>
+	  <div class="col-md-4 project-box"><a href=""><img class="project-img" src="img/iloilo.jpg"><h2>Iloilo</h2></div>
+	  <div class="col-md-4 project-box"><a href=""><img class="project-img" src="img/leyte.jpg"><h2>Leyte</h2></div>
+	</div>
 
 
-	<!-- footer -->
-	<div class="row footer">
+</div><!-- container -->
 
-		  <div class="col-md-6 footer-box" id="footer-address">
-		   	<p>HILTI Training Center, UPRC III Bdlg, 2289, Chino Roces Ave, Makati, 1200 Metro Manila</p>
-		  </div>
-		  
 
-		  <div class="col-md-6 footerbox" id="footer-social-media">
-		  	<i class="fa fa-facebook fa-4x" aria-hidden="true"></i>
-		  	<i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
+<!-- footer -->
+<div class="row footer">
 
-		  </div>
+  <div class="col-md-6 footer-box" id="footer-address">
+   	<p>HILTI Training Center, UPRC III Bdlg, 2289, Chino Roces Ave, Makati, 1200 Metro Manila</p>
+  </div>
+  
 
-	</div><!-- footer -->
+  <div class="col-md-6 footerbox" id="footer-social-media">
+  	<i class="fa fa-facebook fa-4x" aria-hidden="true"></i>
+  	<i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
+
+  </div>
+
+</div><!-- footer -->
 	
 
 
