--- a/csp1/projects.html
+++ b/csp1/projects.html
@@ -66,15 +66,14 @@
 <!-- footer -->
 <div class="row footer">
 
-  <div class="col-md-6 footer-box" id="footer-address">
+  <div class="col-md-10 footer-box">
    	<p>HILTI Training Center, UPRC III Bdlg, 2289, Chino Roces Ave, Makati, 1200 Metro Manila</p>
   </div>
   
 
-  <div class="col-md-6 footerbox" id="footer-social-media">
-  	<i class="fa fa-facebook fa-4x" aria-hidden="true"></i>
+  <div class="col-md-2 footer-box social-box">
+  	<i class="fa fa-facebook fa-4x" aria-hidden="true"></i>&nbsp; &nbsp;
   	<i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
-
   </div>
 
 </div><!-- footer -->
